# obs-dynamic-delay

./: CMakeLists.txt  README.md  buildspec.json  dynamic-delay.c  dynamic-delay.h  dynamic-delay.rc  installer.iss.in
.github/workflows/: build.yml
CI/macos/: dynamic-delay.pkgproj
data/locale/: en-US.ini
